# frugal-agent

./: .gitignore  .gitmodules  README.md  build.sh  pyproject.toml  serve_vllm.sh  utils
chat_templates/: ink_qwen_dependent_tool_call_template-fewshot.jinja  ink_qwen_dependent_tool_call_template.jinja  qwen_default_chat_template.jinja
config/: README.md  __init__.py
config/formatter/: README.md  training_config.py
config/multi_step_tool_calling/: README.md  training_config.py
datasets/alpaca/: load_save_data.ipynb
datasets/chatgpt_ink/: load_data.ipynb
datasets/help_steer2/: load_save_data.ipynb
datasets/help_steer2_dpo/: load_save_data.ipynb
datasets/help_steer3/: load_save_data.ipynb
datasets/natural_thinking/: load_save_data.ipynb
logger/: colored_formatter.py  config.json  logger.py
serving/: parse_utils.py  processing.py  tool_caller.py  vllm_api-ink_agent-gradio.py
serving/others/: gradio_test.py  vllm_api-ink_agent-gradio-bakcup.py
tools/: inference_and_save_lora-unsloth.py  multi_step_tool_calling-trl.py  multi_step_tool_calling-unsloth.py  test.ipynb  test_langchain_tool_calling.ipynb  test_qwen2.5_tool_calling.py  train_agent-trl.py  train_agent-unsloth.py  train_formatter-unsloth.py  trl_demo.py
tools/others/: test.ipynb  test_dependent_tool_call.py
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDDPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothGRPOTrainer_loss_modified.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
utils/: QAs.py  UnslothGRPOTrainer_modified.py  __init__.py  arsenal.py  env.py  ink_dependent_tool_parser.py  reward_functions.py  sys_prompts.py
utils/datasets/: __init__.py  (+3 more)
(+12 files in other folders)
