[project]
name = "frugal-agent"
version = "0.1.0"
requires-python = ">=3.10.15"
dependencies = [
    "accelerate==1.3.0",
    "bitsandbytes>=0.46.0",
    "datasets>=3.6.0",
    "debugpy>=1.8.14",
    "flash-attn>=2.8.0.post2",
    "ipykernel>=6.29.5",
    "peft>=0.15.2",
    "torch==2.5.1",
    "transformers==4.49.0",
    "trl",
    "unsloth",
    "unsloth-zoo>=2025.3.1",
    "vllm",
    "wandb>=0.20.1",
]

[tool.uv.sources]
vllm = { path = "third_party/vllm", editable = true }
trl = { path = "third_party/trl", editable = true }
unsloth = { path = "third_party/unsloth", editable = true }
