[project]
name = "frugal-agent"
version = "0.1.0"
requires-python = "==3.10.15"
dependencies = [
    "accelerate==1.3.0",
    "bitsandbytes>=0.46.0",
    "datasets>=3.6.0",
    "debugpy>=1.8.14",
    "ipykernel>=6.29.5",
    "peft>=0.15.2",
    "torch==2.5.1",
    "transformers==4.49.0",
    "trl",
    "unsloth",
    "wandb>=0.20.1",
    "pip>=25.1.1",
    "setuptools-scm",
    "unsloth-zoo==2025.3.1",
    "gradio>=5.35.0",
    "markdown>=3.8.2",
]

[tool.uv.sources]
trl = { path = "third_party/trl", editable = true }
unsloth = { path = "third_party/unsloth", editable = true }
